tdf#158548 vcl: Require mouse over listbox to mouse-wheel through entries

As described in tdf#158548, it's unexpected that listbox/
combobox entries change when using the mouse wheel while the
listbox/combobox has keyboard focus, but the mouse cursor
is positioned somewhere else

Therefore, only do that for the VCL ListBox when the mouse cursor
is currently positioned above it, which also matches what
e.g. native Qt applications do.
(When using the gtk3 VCL plugin that uses a native GtkComboBox,
nothing changes on scroll independent of the position.)

Change-Id: I8a69628471c1cd4258194627b95145d6b8fb686a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160459
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 22250df05830700b2555348b8ac46ee1007d0e5d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160583